--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -144,11 +144,11 @@
                         <div class="container">
                             <div class="mil-banner-content mil-up">
 
-                                <h1 class="mil-muted mil-mb-60">Designing <span class="mil-thin">a Better</span><br> World <span class="mil-thin">Today</span></h1>
+                                <h1 class="mil-muted mil-mb-60">Designer <span class="mil-thin">of your</span><br> Dream <span class="mil-thin"></span></h1>
                                 <div class="row">
                                     <div class="col-md-7 col-lg-5">
 
-                                        <p class="mil-light-soft mil-mb-60">Transform your business with our expert solutions. At Bestract, we specialize in driving growth and innovation through tailored strategies and cutting-edge technology. Whether you’re looking to optimize operations, enhance customer experience, or scale your business, our team is here to guide you every step of the way.</p>
+                                        <p class="mil-light-soft mil-mb-60">At Bestract, we specialize in training and recruitment, delivering practical, industry-focused solutions that bridge the gap between academic knowledge and real-world needs. Our personalized career development programs and precision-matched recruitment ensure businesses thrive with top-tier talent and innovative solutions tailored for success.</p>
 
                                     </div>
                                 </div>
@@ -191,16 +191,16 @@
                             <div class="col-lg-6 col-xl-5">
 
                                 <div class="mil-mb-90">
-                                    <h2 class="mil-up mil-mb-60">Elevate <br>Your Business <span class="mil-thin">Together</span></h2>
-                                    <p class="mil-up mil-mb-30">At Bestract, we are a dynamic team driven by a passion for turning business challenges into success stories. Our diverse expertise and strategic insights come together to deliver solutions that elevate your business to new heights.</p>
+                                    <h3 class="mil-up mil-mb-60">Unlocking Potential.<br>Transforming Careers. <span class="mil-thin"></span>Elevating Excellence.</h3>
+                                    <p class="mil-up mil-mb-30">At Bestract, we specialize in closing the gap between academic foundations and industry requirements through practical, outcome-oriented training and strategic recruitment solutions. Our dedication to tailored career advancement and precisely aligned talent acquisition ensures individuals thrive, and businesses achieve sustained excellence.</p>
 
-                                    <p class="mil-up mil-mb-60">Collaboration fuels our process. We thrive on bringing different perspectives to the table, creating an environment where innovative ideas flourish. With a focus on exceeding your expectations, we craft strategies that lead to measurable growth and lasting impact.</p>
+                                    <p class="mil-up mil-mb-60">Our mission goes beyond traditional approaches. We strive to empower organizations with strategic solutions and top-tier talent while fostering growth, success, and excellence. Together, we can create a future where potential thrives and opportunities are limitless.</p>
 
                                     <div class="mil-about-quote">
                                         <div class="mil-avatar mil-up">
                                             <img src="user/Images/razilImages/2.webp" alt="Founder">
                                         </div>
-                                        <h6 class="mil-quote mil-up">Razzil <span class="mil-thin">Founder</span> <br>Influencer<span class="mil-thin">Stories From Bangalore</span></h6>
+                                        <h6 class="mil-quote mil-up">Razil <span class="mil-thin"></span> <br> <span class="mil-thin">Founder and CEO</span></h6>
                                     </div>
                                 </div>
 
@@ -233,7 +233,7 @@
                                 <div class="row">
                                     <div class="col-lg-10">
 
-                                        <span class="mil-suptitle mil-light-soft mil-suptitle-right mil-up">We focus on helping your brand<br> grow and move forward.</span>
+                                        <span class="mil-suptitle mil-light-soft mil-suptitle-right mil-up">Bestract gets you best attracted<br> to your destination.</span>
 
                                     </div>
                                 </div>
@@ -241,12 +241,12 @@
                                 <div class="mil-complex-text justify-content-center mil-up mil-mb-15">
 
                                     <span class="mil-text-image"><img src="user/Images/9.webp" alt="team"></span>
-                                    <h2 class="mil-h1 mil-muted mil-center">Unique <span class="mil-thin">Ideas</span></h2>
+                                    <h2 class="mil-h1 mil-muted mil-center">Unlock <span class="mil-thin">Potential</span></h2>
 
                                 </div>
                                 <div class="mil-complex-text justify-content-center mil-up">
 
-                                    <h2 class="mil-h1 mil-muted mil-center">For Your <span class="mil-thin">Business.</span></h2>
+                                    <h2 class="mil-h1 mil-muted mil-center">Unleash<span class="mil-thin"> Success.</span></h2>
                                     <a href="/consulting" class="mil-services-button mil-button mil-arrow-place"><span>What we do</span></a>
 
                                 </div>
@@ -256,8 +256,8 @@
                                 <div class="col-md-6 col-lg-3 mil-services-grid-item p-0">
 
                                     <a href="/consulting" class="mil-service-card-sm mil-up">
-                                        <h5 class="mil-muted mil-mb-30">Branding and <br>Identity Design</h5>
-                                        <p class="mil-light-soft mil-mb-30">Expert guidance to elevate your brand’s strategy and drive growth.</p>
+                                        <h5 class="mil-muted mil-mb-30">BusinessFix<br></h5>
+                                        <p class="mil-light-soft mil-mb-30">Expert advisory and solutions to drive business excellence.</p>
                                         <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
                                     </a>
 
@@ -265,8 +265,8 @@
                                 <div class="col-md-6 col-lg-3 mil-services-grid-item p-0">
 
                                     <a href="/consulting" class="mil-service-card-sm mil-up">
-                                        <h5 class="mil-muted mil-mb-30">Website Design <br>and Development</h5>
-                                        <p class="mil-light-soft mil-mb-30">Innovative solutions to enhance your website’s performance and user experience.</p>
+                                        <h5 class="mil-muted mil-mb-30">CareerCadence <br></h5>
+                                        <p class="mil-light-soft mil-mb-30">Streamlined recruitment and strategic hiring solutions.</p>
                                         <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
                                     </a>
 
@@ -274,8 +274,8 @@
                                 <div class="col-md-6 col-lg-3 mil-services-grid-item p-0">
 
                                     <a href="/consulting" class="mil-service-card-sm mil-up">
-                                        <h5 class="mil-muted mil-mb-30">Advertising and <br>Marketing Campaigns</h5>
-                                        <p class="mil-light-soft mil-mb-30">Tailored marketing strategies to boost your brand’s visibility and impact.</p>
+                                        <h5 class="mil-muted mil-mb-30">PrepNLift<br></h5>
+                                        <p class="mil-light-soft mil-mb-30">Skills enhancement and industry mentoring for better employability.</p>
                                         <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
                                     </a>
 
@@ -283,8 +283,8 @@
                                 <div class="col-md-6 col-lg-3 mil-services-grid-item p-0">
 
                                     <a href="/consulting" class="mil-service-card-sm mil-up">
-                                        <h5 class="mil-muted mil-mb-30">Creative Consulting <br>and Development</h5>
-                                        <p class="mil-light-soft mil-mb-30">Strategic insights and creative solutions to drive your business forward.</p>
+                                        <h5 class="mil-muted mil-mb-30">Institute2Industry <br></h5>
+                                        <p class="mil-light-soft mil-mb-30">Training to bridge the gap between academia and industry.</p>
                                         <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
                                     </a>
 
@@ -312,7 +312,7 @@
 
                                     <div class="mil-up"><a href="/events" class="mil-button mil-arrow-place mil-mb-60"><span>Read more</span></a></div>
 
-                                    <h4 class="mil-up"><span class="mil-thin">We</span> delivering <br><span class="mil-thin">exceptional</span> results.</h4>
+                                    <h4 class="mil-up"><span class="mil-thin">We</span> deliver <br><span class="mil-thin">exceptional</span> results.</h4>
                                 </div>
 
                             </div>
@@ -538,12 +538,12 @@
                         <div class="row">
                             <div class="col-lg-10">
 
-                                <span class="mil-suptitle mil-suptitle-right mil-suptitle-dark mil-up">Customer reviews are a valuable source <br>of information for both businesses and consumers.</span>
+                                <span class="mil-suptitle mil-suptitle-right mil-suptitle-dark mil-up">Testimonials provide insights that help businesses <br>improve and guide informed decisions.</span>
 
                             </div>
                         </div>
 
-                        <h2 class="mil-center mil-up mil-mb-60">Customer <span class="mil-thin">Voices:</span> <br>Hear What <span class="mil-thin">They Say!</span></h2>
+                        <h2 class="mil-center mil-up mil-mb-60">Insights <span class="mil-thin">from</span> <br> Our  <span class="mil-thin"> Clients!</span></h2>
 
                         <div class="mil-revi-pagination mil-up mil-mb-60"></div>
 
