--- a/views/user/contact.ejs
+++ b/views/user/contact.ejs
@@ -138,7 +138,7 @@
                                 <li><a href="/">Homepage</a></li>
                                 <li><a href="">Contact</a></li>
                             </ul>
-                            <h1 class="mil-mb-60">Get in touch!</h1>
+                            <h2 class="mil-mb-60">Connect. Collaborate. Succeed</h2>
                             <a href="#contact" class="mil-link mil-dark mil-arrow-place mil-down-arrow">
                                 <span>Send message</span>
                             </a>
@@ -158,7 +158,7 @@
                 <!-- contact form -->
                 <section id="contact">
                     <div class="container mil-p-120-90">
-                        <h3 class="mil-center mil-up mil-mb-120">Let's <span class="mil-thin">Talk</span></h3>
+                        <h3 class="mil-center mil-up mil-mb-120">Let's <span class="mil-thin">Connect</span></h3>
                         <form action="/contactPost" method="post" class="row align-items-center">
                             <div class="col-lg-6 mil-up">
                                 <input type="text" name="name" placeholder="What's your name">
