Creat 4 new pages

--- a/views/user/details.ejs
+++ b/views/user/details.ejs
@@ -25,7 +25,7 @@
                                         <a href="/">Homepage</a>
                                     </li>
                                     <li class="mil-has-children">
-                                        <a href="/consulting">Consulting</a>
+                                        <a href="/consulting1">Consulting1</a>
                                     </li>
                                     <li class="mil-has-children">
                                         <a href="/events">Events</a>
@@ -143,7 +143,7 @@
                                 <li><a href="/events">Events</a></li>
                                 <li><a href="">Event Detail</a></li>
                             </ul>
-                            <h1 class="mil-mb-60">Empower Business <span class="mil-thin">Beyond</span></h1>
+                            <h1 class="mil-mb-60">Push business <span class="mil-thin">further</span></h1>
                             <a href="#project" class="mil-link mil-dark mil-arrow-place mil-down-arrow">
                                 <span>Read more</span>
                             </a>
