--- a/views/user/consulting3.ejs
+++ b/views/user/consulting3.ejs
@@ -26,7 +26,7 @@
                                         <a href="/">Homepage</a>
                                     </li>
                                     <li class="mil-has-children mil-active">
-                                        <a href="/consulting">Consulting</a>
+                                        <a href="/Business_Fix">PrepNLift</a>
                                     </li>
                                     <li class="mil-has-children">
                                         <a href="/events">Events</a>
@@ -140,11 +140,11 @@
                         <div class="container">
                             <ul class="mil-breadcrumbs mil-mb-60">
                                 <li><a href="/">Homepage</a></li>
-                                <li><a href="">Consulting</a></li>
+                                <li><a href="">PrepNLift</a></li>
                             </ul>
-                            <h1 class="mil-mb-60">Designing a <br> Better <span class="mil-thin">World Today</span></h1>
+                            <h1 class="mil-mb-60">Ignite potential, <span class="mil-thin">Drive success</span></h1>
                             <a href="#portfolio" class="mil-link mil-dark mil-arrow-place mil-down-arrow">
-                                <span>Our works</span>
+                                <span>Our services</span>
                             </a>
                         </div>
                     </div>
@@ -168,11 +168,10 @@
                                         </div>
                                     </div>
                                     <div class="mil-descr">
+                                        <h4 class="mil-up">Soft Skill Development</h4>
                                         <div class="mil-labels mil-up mil-mb-15">
-                                            <div class="mil-label mil-upper mil-accent">Branding</div>
-                                            <div class="mil-label mil-upper">may 24 2023</div>
+                                            <div class="mil-label mil-upper">Building skills in teamwork, problem-solving, and leadership.</div>
                                         </div>
-                                        <h4 class="mil-up">Elevate Your Business</h4>
                                     </div>
                                 </a>
 
@@ -186,11 +185,10 @@
                                         </div>
                                     </div>
                                     <div class="mil-descr">
+                                        <h4 class="mil-up">Technical Skill Development</h4>
                                         <div class="mil-labels mil-up mil-mb-15">
-                                            <div class="mil-label mil-upper mil-accent">Design</div>
-                                            <div class="mil-label mil-upper">may 24 2024</div>
+                                            <div class="mil-label mil-upper">Enhance professionals' skills with industry-leading tools and technologies.</div>
                                         </div>
-                                        <h4 class="mil-up">Transform Your Business</h4>
                                     </div>
                                 </a>
 
@@ -204,11 +202,10 @@
                                         </div>
                                     </div>
                                     <div class="mil-descr">
+                                        <h4 class="mil-up">Corporate Workshops</h4>
                                         <div class="mil-labels mil-up mil-mb-15">
-                                            <div class="mil-label mil-upper mil-accent">Design</div>
-                                            <div class="mil-label mil-upper">may 24 2023</div>
+                                            <div class="mil-label mil-upper">Targeted workshops to upskill teams and drive organizational growth.</div>
                                         </div>
-                                        <h4 class="mil-up">A Complete Guide About Compliance And Risk Management</h4>
                                     </div>
                                 </a>
 
@@ -222,11 +219,10 @@
                                         </div>
                                     </div>
                                     <div class="mil-descr">
+                                        <h4 class="mil-up">Customized Training Program</h4>
                                         <div class="mil-labels mil-up mil-mb-15">
-                                            <div class="mil-label mil-upper mil-accent">Photography</div>
-                                            <div class="mil-label mil-upper">may 24 2023</div>
+                                            <div class="mil-label mil-upper">Industry-driven courses and certifications for workforce success.</div>
                                         </div>
-                                        <h4 class="mil-up">Everything You Need To Know About Human Resources Information Systems</h4>
                                     </div>
                                 </a>
 
@@ -240,11 +236,10 @@
                                         </div>
                                     </div>
                                     <div class="mil-descr">
+                                        <h4 class="mil-up">Job Readiness</h4>
                                         <div class="mil-labels mil-up mil-mb-15">
-                                            <div class="mil-label mil-upper mil-accent">Design</div>
-                                            <div class="mil-label mil-upper">may 24 2023</div>
+                                            <div class="mil-label mil-upper">Prepares participants with hands-on experience and practical knowledge to meet employer expectations.</div>
                                         </div>
-                                        <h4 class="mil-up">What is Compliance Management</h4>
                                     </div>
                                 </a>
 
@@ -258,11 +253,10 @@
                                         </div>
                                     </div>
                                     <div class="mil-descr">
+                                        <h4 class="mil-up">Post-Training Support</h4>
                                         <div class="mil-labels mil-up mil-mb-15">
-                                            <div class="mil-label mil-upper mil-accent">Design</div>
-                                            <div class="mil-label mil-upper">may 24 2023</div>
+                                            <div class="mil-label mil-upper">Support and career counselling to ensure sustained success.</div>
                                         </div>
-                                        <h4 class="mil-up">What is Digital Transformation in Business Consulting ?</h4>
                                     </div>
                                 </a>
 
