--- a/views/user/contact.ejs
+++ b/views/user/contact.ejs
@@ -24,7 +24,7 @@
                                         <a href="/">Homepage</a>
                                     </li>
                                     <li class="mil-has-children">
-                                        <a href="/consulting">Consulting</a>
+                                        <a href="/consulting1">Consulting1</a>
                                     </li>
                                     <li class="mil-has-children">
                                         <a href="/events">Events</a>
