--- a/views/user/events.ejs
+++ b/views/user/events.ejs
@@ -23,7 +23,7 @@
                                         <a href="/">Homepage</a>
                                     </li>
                                     <li class="mil-has-children">
-                                        <a href="/consulting">Consulting</a>
+                                        <a href="/consulting1">Consulting1</a>
                                     </li>
                                     <li class="mil-has-children mil-active">
                                         <a href="/events">Events</a>
@@ -140,7 +140,7 @@
                                 <li><a href="/">Homepage</a></li>
                                 <li><a href="">Events</a></li>
                             </ul>
-                            <h1 class="mil-mb-60">Shaping <span class="mil-thin">Success </span> <br> Through Impactful<span class="mil-thin"> Events</span></h1>
+                            <h1 class="mil-mb-60">Creating <span class="mil-thin">Success </span> <br> Through Impactful<span class="mil-thin"> Events</span></h1>
                             <a href="#blog" class="mil-link mil-dark mil-arrow-place mil-down-arrow">
                                 <span>Events</span>
                             </a>
