--- a/views/user/footer.ejs
+++ b/views/user/footer.ejs
@@ -25,7 +25,7 @@
                                         <a href="/">Home</a>
                                     </li>
                                     <li class="mil-up">
-                                        <a href="/consulting">Consulting</a>
+                                        <a href="/consulting1">Consulting1</a>
                                     </li>
                                     <li class="mil-up">
                                         <a href="/events">Events</a>
