--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -22,7 +22,7 @@
                                         <a href="/">Homepage</a>
                                     </li>
                                     <li class="mil-has-children">
-                                        <a href="/consulting">Consulting</a>
+                                        <a href="/consulting1">Consulting1</a>
                                     </li>
                                     <li class="mil-has-children">
                                         <a href="/events">Events</a>
@@ -255,7 +255,7 @@
                             <div class="row mil-services-grid m-0">
                                 <div class="col-md-6 col-lg-3 mil-services-grid-item p-0">
 
-                                    <a href="/consulting" class="mil-service-card-sm mil-up">
+                                    <a href="/Business_Fix" class="mil-service-card-sm mil-up">
                                         <h5 class="mil-muted mil-mb-30">BusinessFix<br></h5>
                                         <p class="mil-light-soft mil-mb-30">Expert advisory and solutions to drive business excellence.</p>
                                         <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
@@ -264,7 +264,7 @@
                                 </div>
                                 <div class="col-md-6 col-lg-3 mil-services-grid-item p-0">
 
-                                    <a href="/consulting" class="mil-service-card-sm mil-up">
+                                    <a href="/Career_Cadence" class="mil-service-card-sm mil-up">
                                         <h5 class="mil-muted mil-mb-30">CareerCadence <br></h5>
                                         <p class="mil-light-soft mil-mb-30">Streamlined recruitment and strategic hiring solutions.</p>
                                         <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
@@ -273,7 +273,7 @@
                                 </div>
                                 <div class="col-md-6 col-lg-3 mil-services-grid-item p-0">
 
-                                    <a href="/consulting" class="mil-service-card-sm mil-up">
+                                    <a href="/PrepNLift" class="mil-service-card-sm mil-up">
                                         <h5 class="mil-muted mil-mb-30">PrepNLift<br></h5>
                                         <p class="mil-light-soft mil-mb-30">Skills enhancement and industry mentoring for better employability.</p>
                                         <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
@@ -282,7 +282,7 @@
                                 </div>
                                 <div class="col-md-6 col-lg-3 mil-services-grid-item p-0">
 
-                                    <a href="/consulting" class="mil-service-card-sm mil-up">
+                                    <a href="/Institute2Industry" class="mil-service-card-sm mil-up">
                                         <h5 class="mil-muted mil-mb-30">Institute2Industry <br></h5>
                                         <p class="mil-light-soft mil-mb-30">Training to bridge the gap between academia and industry.</p>
                                         <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
