Creat 4 new pages

--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -421,12 +421,8 @@
 
                                 <div class="mil-mb-90">
                                     <h2 class="mil-up mil-mb-60"><br></h2>
-                                    <p class="mil-up mil-mb-30">We are talented individuals who are passionate about bringing ideas to life. With a diverse range of backgrounds and skill sets, we collaborate to produce effective solutions for our clients.</p>
-
-                                    <p class="mil-up mil-mb-60">Together, our creative team is committed to delivering impactful work that exceeds expectations.</p>
-
-                                    <!-- <div class="mil-up"><a href="/events" class="mil-button mil-arrow-place mil-mb-60"><span></span></a></div> -->
-
+                                    <p class="mil-up mil-mb-30"></p>
+                                    <p class="mil-up mil-mb-60"></p>
                                     <h4 class="mil-up"><span class="mil-thin"></span>  <br><span class="mil-thin"></span></h4>
                                 </div>
 
