--- a/views/user/consulting2.ejs
+++ b/views/user/consulting2.ejs
@@ -164,7 +164,7 @@
                                 <a href="" class="mil-portfolio-item mil-more mil-mb-60">
                                     <div class="mil-cover-frame mil-vert mil-up">
                                         <div class="mil-cover">
-                                            <img src="user/Images/12.webp" alt="cover">
+                                            <img src="user/Images/Counsulting/Onboarding.webp" alt="cover">
                                         </div>
                                     </div>
                                     <div class="mil-descr">
@@ -181,7 +181,7 @@
                                 <a href="" class="mil-portfolio-item mil-more mil-parallax mil-mb-60" data-value-1="60" data-value-2="-60">
                                     <div class="mil-cover-frame mil-hori mil-up">
                                         <div class="mil-cover">
-                                            <img src="user/Images/11.webp" alt="cover">
+                                            <img src="user/Images/Counsulting/Brand.webp" alt="cover">
                                         </div>
                                     </div>
                                     <div class="mil-descr">
@@ -198,7 +198,7 @@
                                 <a href="" class="mil-portfolio-item mil-more mil-parallax mil-mb-60" data-value-1="60" data-value-2="-60">
                                     <div class="mil-cover-frame mil-hori mil-up">
                                         <div class="mil-cover">
-                                            <img src="user/Images/4.webp" alt="cover">
+                                            <img src="user/Images/Counsulting/TalentS.webp" alt="cover">
                                         </div>
                                     </div>
                                     <div class="mil-descr">
@@ -215,7 +215,7 @@
                                 <a href="" class="mil-portfolio-item mil-more mil-mb-60">
                                     <div class="mil-cover-frame mil-vert mil-up">
                                         <div class="mil-cover">
-                                            <img src="user/Images/5.webp" alt="cover">
+                                            <img src="user/Images/Counsulting/Recruitment.webp" alt="cover">
                                         </div>
                                     </div>
                                     <div class="mil-descr">
@@ -232,7 +232,7 @@
                                 <a href="" class="mil-portfolio-item mil-more mil-mb-60">
                                     <div class="mil-cover-frame mil-vert mil-up">
                                         <div class="mil-cover">
-                                            <img src="user/Images/6.webp" alt="cover">
+                                            <img src="user/Images/Counsulting/Strategic1.webp" alt="cover">
                                         </div>
                                     </div>
                                     <div class="mil-descr">
@@ -249,7 +249,7 @@
                                 <a href="" class="mil-portfolio-item mil-more mil-parallax mil-mb-60" data-value-1="60" data-value-2="-60">
                                     <div class="mil-cover-frame mil-hori mil-up">
                                         <div class="mil-cover">
-                                            <img src="user/Images/7.jpeg" alt="cover">
+                                            <img src="user/Images/Counsulting/Execuitve.jpg" alt="cover">
                                         </div>
                                     </div>
                                     <div class="mil-descr">
