--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -1,11 +1,14 @@
 
 
 <%- include('./head') %>
+
+
+
         <!-- menu -->
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="/" class="mil-logo">Bē.</a>
+                <a href="/" class="mil-logo">Bē1.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -110,7 +113,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="/" class="mil-logo">Bē.</a>
+                <a href="/" class="mil-logo">Bē2.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
